# src/routes/v2/index.js
@@ -1,0 +1,9 @@
+const express = require('express');
+const helloRoutes = require('./hello');
+
+const router = express.Router();
+
+// Mount routes
+router.use('/hello', helloRoutes);
+
+module.exports = router;
